--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -2,12 +2,30 @@
 %html
   %head
     %meta{:content => "text/html; charset=UTF-8", "http-equiv" => "Content-Type"}/
-    %title MultinivelModas
+    %title Multinivel Modas
+    %meta{:content => "width=device-width, initial-scale=1", :name => "viewport"}/
+
     = csrf_meta_tags
     = csp_meta_tag
+
+    -# jQuery CDN
+    %script{:crossorigin => "anonymous", :integrity => "sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=", :src => "https://code.jquery.com/jquery-3.4.1.min.js"}
+
     = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_pack_tag 'application', 'data-turbolinks-track': 'reload'
+
+    -# Fonts from google fonts
+    %link{:href => "https://fonts.googleapis.com/css2?family=Pacifico&display=swap", :rel => "stylesheet"}/
+    -# Css animations
+    %link{:href => "https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css", :rel => "stylesheet"}/
   %body
-    %p.notice= notice
-    %p.alert= alert
+    = show_flash_messages
     = yield
+
+    :javascript
+      setTimeout(function(){
+        $(".flash").removeClass("animated fadeInDown");
+        $(".flash").addClass("animated fadeOutUp");
+      }, 5000);
+      
+    = yield(:javascript)
