--- a/app/assets/stylesheets/components/card.scss
+++ b/app/assets/stylesheets/components/card.scss
@@ -1,24 +1,16 @@
 @import "variables";
 
 .card {
-  background-image: url('../images/card-background.jpg');
-  background-size: cover;
-  background-repeat: no-repeat;
-  margin: -30px;
-  padding: 20px;
-
-  @include breakpoint("small-up") {
-    padding: 50px;
-    max-width: 650px;
-    margin: 0 auto;
-  }
+  border-radius: 5px;
+  margin-bottom: 10px;
+  color: white;
+  font-weight: bold;
 
   &__content {
-    background-color: white;
-    text-align: center;
-    padding: 30px;
-    box-shadow: 0px 0 10px 0px $black;
+    padding: 15px;
 
     @include breakpoint("small-up") { padding: 20px }
   }
+
+  @include colors("background-color");
 }
