--- a/app/views/users/dashboard.html.haml
+++ b/app/views/users/dashboard.html.haml
@@ -1,1 +1,19 @@
-oe
+.section
+  .section__content
+    .card.card--blue{style: "background-image: url(https://icongr.am/feather/dollar-sign.svg?color=0b5d7d);background-repeat: no-repeat;background-size: 70px;background-position-y: 140%;"}
+      .card__content
+        %p Seu saldo atual: R$ 0,00
+
+    .columns
+      .column.column--2
+        .card.card--pink{style: "background-image: url(https://icongr.am/feather/package.svg?color=791e2e);background-repeat: no-repeat;background-size: 70px;background-position-y: 140%;"}
+          .card__content
+            %p Meus pedidos
+      .column.column--2
+        .card.card--green{style: "background-image: url(https://icongr.am/feather/plus-square.svg?color=195a52);background-repeat: no-repeat;background-size: 70px;background-position-y: 140%;"}
+          .card__content
+            %p Comprar
+
+    .card.card--yellow{style: "background-image: url(https://icongr.am/feather/layers.svg?color=866705);background-repeat: no-repeat;background-size: 70px;background-position-y: 140%;"}
+      .card__content
+        %p Minha Rede
