--- a/app/assets/stylesheets/theme.scss
+++ b/app/assets/stylesheets/theme.scss
@@ -52,7 +52,7 @@ a {
   flex-direction: row;
   margin: 10% 5%;
 
-  img { border-radius: 50%; margin-right: 20px; }
+  img { border-radius: 50%; margin-right: 20px; height: 100px; width: 100px }
 
   &__text {
     text-align: left;
