--- a/app/views/users/edit.html.haml
+++ b/app/views/users/edit.html.haml
@@ -1,7 +1,9 @@
-%h1 Editing user
+.section.animated.fadeIn
+  .section__content.text-center
+    %h1.title Editar perfil
 
-= render 'form'
+    = render 'form'
 
-= link_to 'Show', @user
-\|
-= link_to 'Back', users_path
+    = link_to 'Show', @user
+    \|
+    = link_to 'Back', users_path
