--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -1,4 +1,4 @@
-= simple_form_for current_user, html: { class: "fancy-form" } do |f|
+= simple_form_for @user, html: { class: "fancy-form" } do |f|
   = f.error_notification
   = f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present?
 
