--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,8 +1,11 @@
 .section
   .section__content.text-center
-    = image_tag(current_user.avatar.url, style: "border-radius: 50%; width: fit-content; margin: 0 auto; max-width: 100%")
+    = image_tag(current_user.avatar.url, style: "border-radius: 50%; width: fit-content; margin: 0 auto; max-width: 100%; max-height: 300px")
     %h3{style: "margin-bottom: 0"}= @user.name
     %small= @user.role
+    %br
+    	
+    = link_to "Editar perfil", edit_user_path(current_user), class: "button button--blue"
 
     %div{style: "text-align: left"}
       %p
@@ -19,8 +22,6 @@
         %p
           %b Tax number:
           = @user.tax_number
-
-      = link_to "Editar perfil", edit_user_path(current_user), class: "button button--blue"
       %hr
 
       %h4 Endereço
