--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -31,7 +31,7 @@
           %img{src: "https://icongr.am/feather/x.svg", onclick: "sidebar()"}
 
           .profile-card
-            = image_tag(current_user.avatar.url)
+            = image_tag(current_user.avatar.url) if current_user.avatar.present?
             .profile-card__text
               %h3= current_user.name.present? ? current_user.name : "Bem vindo!"
               %small Seu saldo: R$ 0,00
