--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -1,26 +1,25 @@
-%h2
-  Edit #{resource_name.to_s.humanize}
-= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f|
-  = f.error_notification
-  .form-inputs
-    = f.input :email, required: true, autofocus: true
-    - if devise_mapping.confirmable? && resource.pending_reconfirmation?
-      %p
-        Currently waiting confirmation for: #{resource.unconfirmed_email}
-    = f.input :password,                                     |
-      hint: "leave it blank if you don't want to change it", |
-      required: false,                                       |
-      input_html: { autocomplete: "new-password" }           |
-    = f.input :password_confirmation,              |
-      required: false,                             |
-      input_html: { autocomplete: "new-password" } |
-    = f.input :current_password,                                     |
-      hint: "we need your current password to confirm your changes", |
-      required: true,                                                |
-      input_html: { autocomplete: "current-password" }               |
-  .form-actions
-    = f.button :submit, "Update"
-%h3 Cancel my account
-%p
-  Unhappy? #{link_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete}
-= link_to "Back", :back
+= show_flash_messages
+.section
+  .section__content
+    %h1.title Editar login
+
+    = simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put, class: "fancy-form" }) do |f|
+      = f.error_notification
+      .form-inputs
+        = f.input :email, required: true, autofocus: true, label: "E-mail"
+        - if devise_mapping.confirmable? && resource.pending_reconfirmation?
+          %p
+            Currently waiting confirmation for: #{resource.unconfirmed_email}
+        = f.input :password,                                     |
+          hint: "Deixe em branco se não quiser editar sua senha", |
+          required: false,                                       |
+          input_html: { autocomplete: "new-password" }, label: "Nova senha"
+        = f.input :password_confirmation,              |
+          required: false,                             |
+          input_html: { autocomplete: "new-password" }, label: "Confirmar nova senha"
+        = f.input :current_password,                                     |
+          hint: "Precisamos da sua senha para alterar essas informações", |
+          required: true,                                                |
+          input_html: { autocomplete: "Senha atual" }, label: "Senha atual"
+      .form-actions
+        %button{type: "submit", class: "button button--full-width button--green"} Salvar
