--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -8,8 +8,8 @@
     = f.input :role, label: "Eu sou:", as: :select, collection: [["Vendedor", "seller"], ["Consultor", "consultant"], ["Comprador", "client"], ["Franquiado", "franchise"]]
     = f.input :graduation, input_html: { value: "sênior" }, as: :hidden
     = f.input :phone, input_html: { 'data-mask': '(00) 00000-0000' }, label: "Telefone"
-    = f.input :social_security_number, input_html: { 'data-mask': '000.000.000-00' }, label: "CPF (se for pessoa física)"
-    = f.input :tax_number, input_html: { 'data-mask': '00.000.000/0000-00' }, label: "CNPJ (se for pessoa jurídica)"
+    = f.input :social_security_number, input_html: { 'data-mask': '000.000.000-00' }, label: "CPF"
+    -# = f.input :tax_number, input_html: { 'data-mask': '00.000.000/0000-00' }, label: "CNPJ (se for pessoa jurídica)"
     = f.input :avatar, label: "Foto de perfil"
 
     %button.button.button--full-width.button--blue.change-slide{type: "button", goTo: "2"} Próximo
