--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -2,7 +2,7 @@
   .section__content.text-center
     = image_tag(current_user.avatar.url, style: "border-radius: 50%; width: fit-content; margin: 0 auto; max-width: 100%; max-height: 300px")
     %h3{style: "margin-bottom: 0"}= @user.name
-    %small= @user.role
+    %small= translate_role(@user.role)
     %br
 
     .columns
