network screens created

--- a/app/assets/stylesheets/theme.scss
+++ b/app/assets/stylesheets/theme.scss
@@ -16,6 +16,7 @@
 @import "components/project";
 @import "components/flash";
 @import "components/slide";
+@import "components/network-card";
 
 body {
   margin: 0;
