--- a/app/assets/stylesheets/components/button.scss
+++ b/app/assets/stylesheets/components/button.scss
@@ -17,3 +17,25 @@
 
   @include colors("background-color");
 }
+
+.select-buttons {
+  width: 100%;
+
+  &__content {
+    margin: 0 auto;
+    width: fit-content;
+  }
+
+  &__button {
+    border-top: 2px solid $green;
+    display: inline-block;
+    padding: 10px;
+    background-color: $light-grey;
+    font-weight: bold;
+
+    &--active {
+      background-color: $green;
+      color: white;
+    }
+  }
+}
