--- a/app/assets/stylesheets/components/fancy-form.scss
+++ b/app/assets/stylesheets/components/fancy-form.scss
@@ -10,7 +10,7 @@
     margin: 10px 0 15px 0;
     padding: 5px 10px;
     font-size: 1rem;
-    background-color: #efefef;
+    background-color: $light-grey;
     border-radius: 10px;
     border: none;
   }
