--- a/app/assets/stylesheets/components/navbar.scss
+++ b/app/assets/stylesheets/components/navbar.scss
@@ -106,6 +106,9 @@
   }
 
   &__list {
+    position: absolute;
+    z-index: 999;
+    
     list-style: none;
     height: 50%;
     display: flex;
@@ -122,7 +125,7 @@
       font-weight: bold;
       margin-left: 10px;
     }
-    
+
     img { float: left }
   }
 
